# homeworks

./: README.md
HomeWork1/: HomeWork1.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mypicturemodel.cpp  mypicturemodel.h  res.qrc
HomeWork2/: hello_world.cpp
HomeWork3/: CMakeLists.txt  CountDelegate.h  CountSlider.cpp  CountSlider.h  DelProxyModel.cpp  DelProxyModel.h  DogsModel.h  FoodModel.h  GameResult.cpp  GameResult.h  HomeWork3.pro  HomeWork3.pro.user.5b9acab  HomeWork3.pro.user.dc0194d  Play.cpp  Play.h  ProductDelegate.h  Records.cpp  Records.h  TwoTableModel.cpp  TwoTableModel.h  countslider.ui  dogs_and_food.db  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  settings.h
HomeWork4/: Ball.cpp  Ball.hpp  Color.cpp  Color.hpp  Dust.hpp  Physics.cpp  Physics.hpp  Point.hpp  World.cpp  World.hpp
HomeWork5/: CMakeLists.txt  main.cpp  statistics.cpp  statistics.h
HomeWork6/: CMakeLists.txt  MyList.h  MyVector.h  main.cpp
HomeWork7/: CMakeLists.txt
HomeWork7/src/: MyList.hpp  MyVector.hpp
HomeWork7/test/: MyList_tests.cpp  MyVector_tests.cpp  main.cpp
